# zomboid-forward

./: .pre-commit-config.yaml  LICENSE  README.md  client.ini  client.py  forward.ini  install_windows.py  server.ini  server.py  setup.cfg  udp_forward.py
src/zomboid_forward/: __init__.py  config.py  events.py  libs.py  selectors_lib.py  utils.py
src/zomboid_forward/client/: __main__.py
src/zomboid_forward/selectors/: client.py  libs.py  server.py
src/zomboid_forward/server/: __main__.py
systemd/: zomboid_forward.service
test/: a.md  c.py  demo.py  luc.py  lus.py  nc.cmd  nc.py  s.py  test.md  ts.py  uc.py  us.py  utils.py  x.py  y.py  y1.py
tests/: us.py
