[metadata]
name = zomboid_forward
version = attr: zomboid_forward.__version__
url = https://github.com/stfujnkk/zomboid-forward
author = stfujnkk
author_email = stfujnkklyf@gmail.com
license = MIT
license_files = LICENSE
description = Lightweight UDP forwarding service that can be used for forwarding Project Zomboid game servers
long_description = file: README.md
classifiers =
    Environment :: Other Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Software Development :: Libraries :: Python Modules
keywords =
    Intranet penetration, socket, Project Zomboid, Forwarding

[options]
package_dir =
    = src
packages = find:
python_requires = ~= 3.7

[options.packages.find]
where = src

[flake8]
exclude = .git, .tox, build
select = C, E, F, W, B, B950, I, N
[style]
based_on_style = pep8
CONTINUATION_ALIGN_STYLE = VALIGN-RIGHT
ALLOW_SPLIT_BEFORE_DEFAULT_OR_NAMED_ASSIGNS = False
COLUMN_LIMIT = 150